// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostrar la imagen del producto  1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug2.png"
  />
</div>
`;

exports[`ProductImage Debe mostrar la imagen personlizada 1`] = `
<img
  alt="Product Image"
  className="productImg undefined"
  src="htpp:image.com"
/>
`;
